Add september 20 job fair

--- a/elon.html
+++ b/elon.html
@@ -5,6 +5,6 @@
   <title>Hello Elon</title>
 </head>
 <body>
-  <h1>Hello Elon University</h1>
+  <h1>Hello Elon University - Job Fair is September 20, 2016</h1>
 </body> 
 </html>
