--- a/elon.html
+++ b/elon.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Hello Elon</title>
 </head>
+<h2> Credit Suisse visits on Sept.28</h2>
 <body>
   <h1>Hello Elon University - Job Fair is September 20, 2016</h1>
 </body> 
